[metadata]
name = CherryPy
author = CherryPy Team
author_email = team@cherrypy.dev
description = Object-Oriented HTTP framework
long_description = file:README.rst
url = https://cherrypy.dev
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Environment :: Web Environment
	Operating System :: OS Independent
	Framework :: CherryPy
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content
	Topic :: Internet :: WWW/HTTP :: HTTP Servers
	Topic :: Internet :: WWW/HTTP :: WSGI
	Topic :: Internet :: WWW/HTTP :: WSGI :: Application
	Topic :: Internet :: WWW/HTTP :: WSGI :: Server
	Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.7
install_requires =
	cheroot >= 8.2.1
	portend >= 2.1.1
	more_itertools
	zc.lockfile
	jaraco.collections

	# https://docs.cherrypy.dev/en/latest/advanced.html?highlight=windows#windows-console-events
	# pywin32 is disabled on Python 3.10 and later due to #1920.
	pywin32 >= 227; sys_platform == "win32" and implementation_name == "cpython" and python_version < "3.10"

project_urls =
	CI: AppVeyor = https://ci.appveyor.com/project/cherrypy/cherrypy
	CI: Travis = https://travis-ci.org/cherrypy/cherrypy
	CI: Circle = https://circleci.com/gh/cherrypy/cherrypy
	Docs: RTD = https://docs.cherrypy.dev
	GitHub: issues = https://github.com/cherrypy/cherrypy/issues
	GitHub: repo = https://github.com/cherrypy/cherrypy
	Tidelift: funding = https://tidelift.com/subscription/pkg/pypi-cherrypy?utm_source=pypi-cherrypy&utm_medium=referral&utm_campaign=pypi

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-flake8
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.3

	# local
	coverage
	codecov

	# cherrypy.lib.gctools
	objgraph

	pytest-forked
	pytest-sugar
	path.py
	requests_toolbelt
	pytest-services>=2
	setuptools

docs =
	# upstream
	sphinx
	jaraco.packaging >= 9
	rst.linker >= 1.9

	docutils
	alabaster
	sphinxcontrtib-apidoc >= 0.3.0

json =
	simplejson

routes_dispatcher =
	routes >= 2.3.1

ssl =
	pyOpenSSL

memcached_session =
	python-memcached >= 1.58

xcgi =
	flup

[options.entry_points]
console_scripts =
	cherryd = cherrypy.__main__:run
