[bdist_wheel]
# NOTE: "universal = 1" causes `bdist_wheel` to create a wheel that with the
# NOTE: tag "py2.py3" which implies (and tricks pip into thinking) that this
# NOTE: wheel contains Python 2 compatible code. This is not true and conflicts
# NOTE: with the "Requires-Python" field in the metadata that says that we only
# NOTE: support Python 3+.
# NOTE: We need to keep it at "0" which will produce wheels tagged with "py3"
# NOTE: when built under Python 3.
# Ref: https://github.com/pypa/packaging.python.org/issues/726
universal = 0

[metadata]
license_file = LICENSE.md
long_description = file:README.rst
long_description_content_type = text/x-rst
